@@ -16,7 +16,7 @@ public class MyShortestPathProblem implements ShortestPathProblem {
     private List<Integer> path = new ArrayList<>();
     private Set<Integer> visited = new HashSet<>();
 
-    public MyShortestPathProblem(int[][] graph, int start, int end){
+    public MyShortestPathProblem(int[][] graph, int start, int end) {
         this.graph = graph;
         this.start = start;
         this.end = end;
@@ -26,33 +26,42 @@ public class MyShortestPathProblem implements ShortestPathProblem {
     }
 
     @Override
-    public boolean isSolution(){
-        return path.get(path.size() - 1) == end;
+    public boolean isSolution() {
+        return path.getLast() == end;
     }
 
     @Override
-    public void applyMove(int move){
-        int from = path.get(path.size() - 1);
+    public void applyMove(int move) {
+        if (path.isEmpty()) {
+            return;
+        }
+
+        int from = path.getLast();
         currentLength += graph[from][move];
         path.add(move);
         visited.add(move);
     }
 
     @Override
-    public void undoMove(int move){
-        path.remove(path.size() - 1);
-        visited.remove(move);
-        int from = path.get(path.size() - 1);
-        currentLength -= graph[from][move];
+    public void undoMove(int move) {
+        if (path.size() <= 1) {
+            return;
+        }
+
+        int to = path.getLast();
+        path.removeLast();
+        visited.remove(to);
+        int from = path.getLast();
+        currentLength -= graph[from][to];
     }
 
     @Override
-    public List<Integer> getPossibleMoves(){
-        int from = path.get(path.size() - 1);
+    public List<Integer> getPossibleMoves() {
+        int from = path.getLast();
         List<Integer> moves = new ArrayList<>();
 
-        for (int to = 0; to < graph.length; to++){
-            if (graph[from][to] > 0 && !visited.contains(to)){
+        for (int to = 0; to < graph.length; to++) {
+            if (graph[from][to] > 0 && !visited.contains(to)) {
                 moves.add(to);
             }
         }
@@ -60,12 +69,21 @@ public class MyShortestPathProblem implements ShortestPathProblem {
     }
 
     @Override
-    public List<Integer> getCurrentPath(){
+    public List<Integer> getCurrentPath() {
         return path;
     }
 
     @Override
-    public int getCurrentPathLength(){
+    public int getCurrentPathLength() {
         return path.size();
+    }
+
+    @Override
+    public MyShortestPathProblem copy() {
+        MyShortestPathProblem copy = new MyShortestPathProblem(graph, start, end);
+        copy.path = new ArrayList<>(this.path);
+        copy.visited = new HashSet<>(this.visited);
+        copy.currentLength = this.currentLength;
+        return copy;
     }
 }
